# Capstone_2019_V2

./: README.md
ROS/capstone_V2/: CMakeLists.txt  package.xml
ROS/capstone_V2/src/: depth2cloud_V1.cpp  depth2cloud_V2.cpp  depthImagePreProcessing.cpp
ROS/capstone_v1/: CMakeLists.txt  package.xml
ROS/capstone_v1/include/capstone_v1/: depth2cloud.h
ROS/capstone_v1/src/: main.cpp
Yolo_mark/x64/Release/data/: obj.data  obj.names  test.txt  train.txt
Yolo_mark/x64/Release/data/img/: image2733.txt  image2734.txt  image2737.txt  image2739.txt  image2740.txt  image2741.txt  image2742.txt  image2743.txt  image2744.txt  image2745.txt  image2747.txt  image2749.txt  image2751.txt  image2753.txt  image2754.txt  image2755.txt  image2756.txt  image2757.txt  image2758.txt  image2759.txt  image2760.txt  image2761.txt  image2763.txt  image2764.txt  image2765.txt  image2766.txt  image2767.txt  image2769.txt  image2770.txt  image2771.txt  image2772.txt  image2773.txt  image2774.txt  image2776.txt  image2777.txt  image2779.txt  image2780.txt  image2782.txt  image2783.txt  image2784.txt  (+450 more)
darknet/: bad.list  bad_label.list
pcl/: CMakeLists.txt  pcl_test3.cpp  questions.txt
pcl/depth2cloud/: CMakeLists.txt  depth2cloud.cpp  depth2cloudV2.cpp
pcl/segmentation_extraction/: CMakeLists.txt  depthpcl_1.ply  segmentation.cpp
pcl/transformPlane/: CMakeLists.txt  test450.pcd  transformPlane.cpp
pcl/transformPlane-build/: CMakeCache.txt  Makefile  cmake_install.cmake  pcl-segmentation.cbp  transformPlane
pcl/v1/: CMakeLists.txt  depthpcl_1.ply  pcl_test1.cpp  pcl_test2.cpp  pcl_test3.cpp
